--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start-api": "json-server --watch api/db.json"
+    "api": "json-server --watch api/db.json",
+    "start": "run-p dev api"
   },
   "dependencies": {
     "json-server": "^0.17.0",
@@ -18,6 +19,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "npm-run-all": "^4.1.5",
     "vite": "^3.1.0"
   }
 }
