--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "run-p dev api"
   },
   "dependencies": {
+    "framer-motion": "^10.6.1",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
